objects/WO_INSITE_Images__c.object
<CustomObject>
    <fields>
        <fullName>Csv_After_Image_ModifiedDate_Time__c</fullName>
        <label>Csv After Image ModifiedDate/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Csv_After_Image__c</fullName>
        <label>Csv After Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Csv_After_Image_present__c</fullName>
        <label>Csv After Image present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Csv_Before_Image_ModifiedDate_Time__c</fullName>
        <label>Csv Before Image ModifiedDate/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Csv_Before_Image__c</fullName>
        <label>Csv Before Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Csv_Before_Image_present__c</fullName>
        <label>Csv Before Image present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eif_After_Image_ModifiedDate_Time__c</fullName>
        <label>Eif After Image ModifiedDate/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eif_After_Image_Present__c</fullName>
        <label>Eif After Image Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eif_After_Image__c</fullName>
        <label>Eif After Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eif_Before_Image_ModifiedDate_Time__c</fullName>
        <description>Eif Before Image ModifiedDate/Time</description>
        <label>Eif Before Image ModifiedDate/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eif_Before_Image_Present__c</fullName>
        <label>Eif Before Image Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eif_Before_Image__c</fullName>
        <label>Eif Before Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>WO INSITE Images</relationshipLabel>
        <relationshipName>WO_INSITE_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WO INSITE Images</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WO INSITE Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>